# VLM_individual

./: .gitignore  README.md  collect_data.py  environment.yml  pyproject.toml  sweep_wandb.py  train.py  validate.py
artifacts/: README.md
artifacts/contracts/: README.md  wandb_identity_contract.json
artifacts/evidence/: env_validation.json  habitat_web_balanced_build_episodes_attempt.json  habitat_web_balanced_selection_audit.json  habitat_web_balanced_selection_build.json  habitat_web_scene_inventory_audit.json  hm3d_pr2l_cache_audit_1519.json  hm3d_pr2l_val_cache_eval_1572.json  (+1 more)
checkpoints/: README.md
configs/: __init__.py  builder.py  schema.py
configs/data/: default.yaml  (+5 more)
data/: __init__.py  habitat_cache.py  habitat_dataset.py  habitat_manifest.py  habitat_objectnav.py  habitat_web.py  habitat_web_render.py  hm3d_objectnav_render.py  synthetic.py
docs/: data_contract.md  dependencies.md  pr2l_implementation_notes.md
encoders/: __init__.py  base.py  prismatic.py
evaluation/: __init__.py  offline_eval.py  preflight.py
individual_researcher_initial/: README.md  build_graph.py  build_graph.slurm  collect_data.slurm  extract_embedding.py  extract_embedding.slurm  pr2l_objectnav.yaml  train_policy.py  train_policy.slurm
objectives/: __init__.py  behavior_cloning.py
policies/: __init__.py  graph_policy.py
tests/: test_config_builder.py  test_habitat_objectnav.py  test_habitat_web.py  test_habitat_web_render.py  test_hm3d_objectnav_render.py  test_offline_eval.py  test_pr2l_trajectory.py  test_prismatic_encoder.py
topology/: __init__.py  graph_builder.py
training/: __init__.py  runner.py
utils/: __init__.py  checkpoint_io.py  randomness.py
(+45 files in other folders)
