[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "topovlm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "Pillow",
  "PyYAML",
  "torch",
]

[project.optional-dependencies]
habitat = ["habitat-lab"]
prismatic = ["prismatic-vlms @ git+https://github.com/TRI-ML/prismatic-vlms.git"]
dev = ["pytest", "ruff"]

[tool.setuptools]
packages = [
  "configs",
  "data",
  "encoders",
  "evaluation",
  "objectives",
  "policies",
  "topology",
  "training",
  "utils",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["individual_researcher_initial"]

[tool.pytest.ini_options]
testpaths = ["tests"]
