[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "topovlm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "Pillow",
  "PyYAML",
  "torch",
  "wandb>=0.16",
]

[project.optional-dependencies]
habitat = ["habitat-lab @ git+https://github.com/facebookresearch/habitat-lab.git@stable#subdirectory=habitat-lab"]
prismatic = [
  "transformers==4.38.1",
  "huggingface-hub<1.0",
  "prismatic @ git+https://github.com/TRI-ML/prismatic-vlms.git",
]
dev = ["pytest", "ruff", "build"]

[tool.setuptools]
packages = [
  "configs",
  "data",
  "encoders",
  "evaluation",
  "objectives",
  "policies",
  "topology",
  "training",
  "utils",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["individual_researcher_initial"]

[tool.pytest.ini_options]
testpaths = ["tests"]
